charts/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik-system
spec:
  basicAuth:
    secret: traefik-dashboard-auth-secret
