charts/traefik/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`192.168.10.35`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: traefik-system
      services:
        - name: api@internal
          kind: TraefikService
